[project]
name = "renogy-mqtt"
version = "0.1.0"
description = "Used to upload data from a Renogy solar charge controller to a MQTT broker."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "modbus-tk>=1.1.5",
    "paho-mqtt>=2.1.0",
    "pyserial>=3.5",
    "renogymodbus>=0.0.23",
]

[tool.ruff]
line-length = 80

[tool.ruff.lint]
select = [
    "D",   # Docstring issues
    "E",   # Errors
    "W",   # Warnings
    "F",   # Pyflakes issues
    "C",   # Complexity issues
    "I",   # Import issues
    "N",   # Naming issues
    "T",   # Type issues
    "S",   # Security issues   
    "ANN", # Type annotations issues
]

ignore = [
    "ANN401", # Any type annotations
    "N817",   # Naming convention for module names
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = ["ruff>=0.12.1"]
